[workspace]
resolver = "2"
members = [
    "lib-garble-rs",
    "ipfs-client-http-req",
]

################################################################################
# [patch."https://github.com/Interstellar-Network/swanky.git"]
# fancy-garbling = { path = "../swanky/fancy-garbling/" }

# [patch."https://github.com/Interstellar-Network/pallets.git"]
# tests-utils = { path = "../pallets/tests_utils/" }

# [patch."https://github.com/Interstellar-Network/rs-common.git"]
# http-grpc-client = { path = "../rs-common/http-grpc-client/" }
################################################################################

[profile.dev]
# without optimizations the tests with display circuits(even the small 120x52) are REALLY slow
opt-level = 1