[workspace]
resolver = "2"
members = ["lib-garble-rs"]

################################################################################
# [patch."https://github.com/Interstellar-Network/rs-common.git"]
# interstellar-http-client = { path = "../rs-common/http-client/" }
# interstellar-ipfs-client = { path = "../rs-common/ipfs-client-http-req/" }
# png-utils = { path = "../rs-common/png_utils" }
# tests-utils = { path = "../pallets/tests_utils/" }

[patch."https://github.com/Interstellar-Network/lib_circuits.git"]
circuit-types-rs = { path = "../lib_circuits/circuit-types-rs/" }

################################################################################

[profile.dev]
# without optimizations the tests with display circuits(even the small 120x52) are REALLY slow
opt-level = 0

# custom profile use for profiling:
# - release optimisations
# - BUT with debug to have nice stacktrace and profiling data
[profile.release-with-debug]
inherits = "release"
debug = true
