[package]
name = "ipfs-client-http-req"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_with = { version = "2.1.0", default-features = false, features = ["alloc", "macros"] }
snafu = { version = "0.7", default-features = false }
# http_req_sgx = { package = "http_req", git = "https://github.com/mesalock-linux/http_req-sgx", optional = true }
# default is "native-tls", but that needs to (cross-)compile openssl-sys which COULD be a pain on Android; In ancy case, rustls works fine
# http_req_std = { package = "http_req", version = "0.9", optional = true, default-features = false, features = ["rust-tls"] }
sgx_tstd = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
ocw-common = { git = "https://github.com/Interstellar-Network/pallets.git", branch = "interstellar-M5", default-features = false, features = ["sp_offchain"] }

[features]
default = ["std"]
sgx = ["ocw-common/sgx", "sgx_tstd"]
std = ["ocw-common/std"]

[dev-dependencies]
tests-utils = { git = "https://github.com/Interstellar-Network/pallets", branch = "interstellar-M5" }
libp2p = { default-features = false, features = ["floodsub", "identify", "kad", "tcp-tokio", "mplex", "noise", "ping", "yamux", "dns-tokio"], version = "0" }
tokio-test = "*"
crossbeam-utils = "*"